--- a/css/hippo.css
+++ b/css/hippo.css
@@ -1,3 +1,12 @@
+body {
+	padding-top: 60px;
+}
+
+h1 {
+	font-size: 20px;
+	color: black;
+}
+
 #hippoNav {
 	background-color: white;
 	border: none;
