--- a/templates/home.html
+++ b/templates/home.html
@@ -1,3 +1,44 @@
-<div>
-	<h1>Home Page</h1>
+<div class="container">
+
+	<!-- Image Carousel -->
+	<div id="hippoCarousel" class="carousel slide" data-ride="carousel">
+		<ol class="carousel-indicators carousel-justified">
+			<li data-target="#hippoCarousel" data-slide-to="0" class="active"></li>
+			<li data-target="#hippoCarousel" data-slide-to="1"></li>
+			<li data-target="#hippoCarousel" data-slide-to="2"></li>
+		</ol>
+
+		<!-- Images -->	
+		<div class="carousel-inner" role="listbox">
+			<div class="item active">
+				<img src="images/hippo1.jpg" alt="Hippo at Zoo">
+				<div class="carousel-content">
+					<p>Welcome to <strong>Smallroundears</strong>!<br/>A site dedicated to learning about the Hippopotamus.</p>
+				</div>
+			</div>
+			<div class="item">
+				<img src="images/hippo2.jpg" alt="Hippo Lay Down">
+				<div class="carousel-content">
+					<p>Hippos are a very misunderstood animal.<br/>This site will clear up some common misconceptions regarding them.</p>
+				</div>
+			</div>
+			<div class="item">
+				<img src="images/hippo3.jpg" alt="Hippos in Water">
+				<div class="carousel-content">
+					<p><strong>Did you know?</strong><br/>About 2,900 people are killed by Hippos every year.</p>
+				</div>
+			</div>
+		</div>
+
+		<!-- Controls -->
+		<a class="left carousel-control" href="#hippoCarousel" role="button" data-slide="prev">
+			<span class="glyphicon glyphicon-chevron-left"></span>
+			<span class="sr-only">Previous</span>
+		</a>
+		<a class="right carousel-control" href="#hippoCarousel" role="button" data-slide="next">
+			<span class="glyphicon glyphicon-chevron-right"></span>
+			<span class="sr-only">Next</span>
+		</a>
+	</div>
+
 </div>
