--- a/css/hippo.css
+++ b/css/hippo.css
@@ -2,12 +2,12 @@ body {
 	padding-top: 80px;
 }
 
-#hippoNav {
+.hippoNav {
 	background-color: white;
 	border: none;
 }
 
-#hippoNav > .container {
+.hippoNav > .container {
 	height: 60px;
 	background: linear-gradient(to bottom, #C5C4C8, #A9A9AE);
 	font-family: 'Happy Monkey', cursive;
@@ -58,4 +58,24 @@ body {
 	background-color: rgba(255,255,255,0.7);
 	font-size: 20px;
 	text-align: center;
+}
+
+footer {
+	margin-top: 20px;
+	font-size: 20px;
+}
+
+footer > .container {
+	padding: 15px 0;
+}
+
+footer > .container > a {
+	padding: 0 10px;
+	color: #5C5757;
+}
+
+footer > .container > p {
+	display: inline-block;
+	float: right;
+	padding-right: 10px;
 }
