--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,7 @@
 <div class="container">
 
 	<!-- Image Carousel -->
-	<div id="hippoCarousel" class="carousel slide" data-ride="carousel">
+	<figure id="hippoCarousel" class="carousel slide" data-ride="carousel">
 		<ol class="carousel-indicators carousel-justified">
 			<li data-target="#hippoCarousel" data-slide-to="0" class="active"></li>
 			<li data-target="#hippoCarousel" data-slide-to="1"></li>
@@ -39,6 +39,6 @@
 			<span class="glyphicon glyphicon-chevron-right"></span>
 			<span class="sr-only">Next</span>
 		</a>
-	</div>
+	</figure>
 
 </div>
