--- a/templates/info.html
+++ b/templates/info.html
@@ -1,3 +1,56 @@
 <section class="container">
-	<h1>Info Page</h1>
+	<aside class="col-sm-3">
+		<a class="btn" role="button" data-toggle="collapse" href="#collapseGeneral"><span class="glyphicon glyphicon-circle-arrow-right"></span>  General Info</a>
+		<a class="btn" role="button" data-toggle="collapse" href="#collapseHabitat"><span class="glyphicon glyphicon-circle-arrow-right"></span>  Habitat</a>
+		<a class="btn" role="button" data-toggle="collapse" href="#collapseBehaviour"><span class="glyphicon glyphicon-circle-arrow-right"></span>  Behaviour</a>
+		<a class="btn" role="button" data-toggle="collapse" href="#collapseTypes"><span class="glyphicon glyphicon-circle-arrow-right"></span>  Types of Hippo</a>
+		<a class="btn" role="button" data-toggle="collapse" href="#collapsePeople"><span class="glyphicon glyphicon-circle-arrow-right"></span>  People & Hippos</a>
+	</aside>
+	<article class="col-sm-9">
+		<div id="collapseGeneral" class="collapse">
+			<h2>General Info</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		</div>
+		<div id="collapseHabitat" class="collapse">
+			<h2>Habitat</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		</div>
+		<div id="collapseBehaviour" class="collapse">
+			<h2>Behaviour</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		</div>
+		<div id="collapseTypes" class="collapse">
+			<h2>Types of Hippo</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		</div>
+		<div id="collapsePeople" class="collapse">
+			<h2>People & Hippos</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		</div>
+	</article>
 </section>
