--- a/templates/links.html
+++ b/templates/links.html
@@ -1,3 +1,15 @@
 <section class="container">
-	<h1>Links Page</h1>
+	<article class="col-sm-12 hippolinks">
+		<p>Wikipedia Hippo Page - <a href="https://en.wikipedia.org/wiki/Hippopotamus">Link</a></p>
+		<p>African Wildlife Foundation - <a href="http://www.awf.org/wildlife-conservation/hippopotamus">Link</a></p>
+		<p>National Geographic - <a href="http://www.nationalgeographic.com/animals/mammals/h/hippopotamus/">Link</a></p>
+		<p>The IUCN Red List of Threatened Species - <a href="http://www.iucnredlist.org/details/10103/0">Link</a></p>
+		<p>London Zoo's Pygmy Hippos - <a href="https://www.zsl.org/zsl-london-zoo/exhibits/pygmy-hippos">Link</a></p>
+		<p>More Pictures of Hippos - <a href="http://www.google.com/images?q=Hippos">Link</a></p>
+		<p>More Videos of Hippos - <a href="https://www.youtube.com/playlist?list=PLzHPWmx27RRCUrfJ48G4FlCKG0stfF-pD">Link</a></p>
+		<br/>
+		<figure>
+			<img src="images/hippocartoon.svg" alt="Cartoon Hippo">
+		</figure>
+	</article>
 </section>
