--- a/templates/info.html
+++ b/templates/info.html
@@ -1,4 +1,6 @@
 <section class="container">
+
+	<!-- Sidebar -->
 	<aside class="col-sm-3">
 		<a class="btn" role="button" data-toggle="collapse" href="#collapseGeneral"><span class="glyphicon glyphicon-circle-arrow-right"></span>  General Info</a>
 		<a class="btn" role="button" data-toggle="collapse" href="#collapseHabitat"><span class="glyphicon glyphicon-circle-arrow-right"></span>  Habitat</a>
@@ -6,6 +8,8 @@
 		<a class="btn" role="button" data-toggle="collapse" href="#collapseTypes"><span class="glyphicon glyphicon-circle-arrow-right"></span>  Types of Hippo</a>
 		<a class="btn" role="button" data-toggle="collapse" href="#collapsePeople"><span class="glyphicon glyphicon-circle-arrow-right"></span>  People & Hippos</a>
 	</aside>
+
+	<!-- Collapsing Infomation Sections -->
 	<article class="col-sm-9">
 		<div id="collapseGeneral" class="collapse">
 			<h2>General Info</h2>
@@ -53,4 +57,5 @@
 			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 		</div>
 	</article>
+	
 </section>
