--- a/templates/links.html
+++ b/templates/links.html
@@ -1,4 +1,6 @@
 <section class="container">
+
+	<!-- Links -->
 	<article class="col-sm-12 hippolinks">
 		<p>Wikipedia Hippo Page - <a href="https://en.wikipedia.org/wiki/Hippopotamus">Link</a></p>
 		<p>African Wildlife Foundation - <a href="http://www.awf.org/wildlife-conservation/hippopotamus">Link</a></p>
@@ -8,8 +10,11 @@
 		<p>More Pictures of Hippos - <a href="http://www.google.com/images?q=Hippos">Link</a></p>
 		<p>More Videos of Hippos - <a href="https://www.youtube.com/playlist?list=PLzHPWmx27RRCUrfJ48G4FlCKG0stfF-pD">Link</a></p>
 		<br/>
+
+		<!-- Cartoon Hippo Image -->
 		<figure>
 			<img src="images/hippocartoon.svg" alt="Cartoon Hippo">
 		</figure>
 	</article>
+
 </section>
