--- a/templates/media.html
+++ b/templates/media.html
@@ -2,13 +2,15 @@
 
 	<!-- Sidebar -->
 	<aside class="col-sm-3">
-		<a class="btn" role="button" data-toggle="collapse" href="#collapsePictures"><span class="glyphicon glyphicon-circle-arrow-right"></span>  Pictures</a>
-		<a class="btn" role="button" data-toggle="collapse" href="#collapseVideo"><span class="glyphicon glyphicon-circle-arrow-right"></span>  Video</a>
+	<ul class="nav nav-pills nav-stacked">
+		<li class="active"><a data-toggle="pill" href="#menuPictures"><span class="glyphicon glyphicon-circle-arrow-right"></span>  Pictures</a></li>
+		<li><a data-toggle="pill" href="#menuVideo"><span class="glyphicon glyphicon-circle-arrow-right"></span>  Video</a></li>
+	</ul>
 	</aside>
 
 	<!-- Picture Gallery -->
-	<article class="col-sm-9">
-		<div id="collapsePictures" class="collapse">
+	<article class="col-sm-9 tab-content">
+		<div id="menuPictures" class="tab-pane fade in active">
 			<div class="col-lg-4 col-sm-6 col-xs-12">
 				<figure class="thumbnail">
 					<img src="images/hippo4.jpg" alt="Baby Hippo in water">
@@ -75,11 +77,7 @@
 			</div>
 		</div>
 
-	</article>
-
-	<!-- Video -->
-	<article class="col-sm-9">
-		<div id="collapseVideo" class="collapse">
+		<div id="menuVideo" class="tab-pane fade">
 			<h1>Placeholder for video</h1>
 		</div>
 	</article>
