--- a/templates/info.html
+++ b/templates/info.html
@@ -2,16 +2,18 @@
 
 	<!-- Sidebar -->
 	<aside class="col-sm-3">
-		<a class="btn" role="button" data-toggle="collapse" href="#collapseGeneral"><span class="glyphicon glyphicon-circle-arrow-right"></span>  General Info</a>
-		<a class="btn" role="button" data-toggle="collapse" href="#collapseHabitat"><span class="glyphicon glyphicon-circle-arrow-right"></span>  Habitat</a>
-		<a class="btn" role="button" data-toggle="collapse" href="#collapseBehaviour"><span class="glyphicon glyphicon-circle-arrow-right"></span>  Behaviour</a>
-		<a class="btn" role="button" data-toggle="collapse" href="#collapseTypes"><span class="glyphicon glyphicon-circle-arrow-right"></span>  Types of Hippo</a>
-		<a class="btn" role="button" data-toggle="collapse" href="#collapsePeople"><span class="glyphicon glyphicon-circle-arrow-right"></span>  People & Hippos</a>
+		<ul class="nav nav-pills nav-stacked">
+			<li class="active"><a data-toggle="pill" href="#menuGeneral"><span class="glyphicon glyphicon-circle-arrow-right"></span>  General Info</a></li>
+			<li><a data-toggle="pill" href="#menuHabitat"><span class="glyphicon glyphicon-circle-arrow-right"></span>  Habitat</a></li>
+			<li><a data-toggle="pill" href="#menuBehaviour"><span class="glyphicon glyphicon-circle-arrow-right"></span>  Behaviour</a></li>
+			<li><a data-toggle="pill" href="#menuTypes"><span class="glyphicon glyphicon-circle-arrow-right"></span>  Types of Hippo</a></li>
+			<li><a data-toggle="pill" href="#menuPeople"><span class="glyphicon glyphicon-circle-arrow-right"></span>  People & Hippos</a></li>
+		</ul>
 	</aside>
 
 	<!-- Collapsing Infomation Sections -->
-	<article class="col-sm-9">
-		<div id="collapseGeneral" class="collapse">
+	<article class="tab-content col-sm-9">
+		<div id="menuGeneral" class="tab-pane fade in active">
 			<h2>General Info</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -20,7 +22,7 @@
 			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 		</div>
-		<div id="collapseHabitat" class="collapse">
+		<div id="menuHabitat" class="tab-pane fade">
 			<h2>Habitat</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -29,7 +31,7 @@
 			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 		</div>
-		<div id="collapseBehaviour" class="collapse">
+		<div id="menuBehaviour" class="tab-pane fade">
 			<h2>Behaviour</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -38,7 +40,7 @@
 			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 		</div>
-		<div id="collapseTypes" class="collapse">
+		<div id="menuTypes" class="tab-pane fade">
 			<h2>Types of Hippo</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -47,7 +49,7 @@
 			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 		</div>
-		<div id="collapsePeople" class="collapse">
+		<div id="menuPeople" class="tab-pane fade">
 			<h2>People & Hippos</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
