--- a/templates/info.html
+++ b/templates/info.html
@@ -11,52 +11,93 @@
 		</ul>
 	</aside>
 
-	<!-- Collapsing Infomation Sections -->
+	<!-- Infomation Sections -->
 	<article class="tab-content col-sm-9">
+
+		<!-- General Info Article -->
 		<div id="menuGeneral" class="tab-pane fade in active">
-			<h2>General Info</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+			<h4>The Hippopotamus</h4><br/>
+
+			<img id="generalPic" class="infoPics" src="images\hippo5.jpg" alt="Hippo Eating">
+
+			<p>Hippopotamus is the latin name for the Hippo, which was derived from the greek name that translates roughly as "Horse of the river" and the plural of this is Hippopotami or Hippopotamuses. A group of multiple Hippos is called a pod. The Hippo is the 3rd largest land mammal after the elephant and rhino. Adult Hippos weigh on average 1,500kg (3,300lbs) and 1,300kg (2,900lbs) for males and females respectively, but have been known to exceed 3,600kg! (8000lbs). Despite this and their short legs, they are capable of running at 19mph (30km/h) for short bursts. Hippos are semiaquatic meaning they spend a huge fraction of their lives in water, they cannot really swim however, their fat is extremely buoyant which helps them underwater, but they walk underwater rather than swim. Hippos can hold their breath for long periods of time, their nostrils close, and they can hold their breath for five minutes or longer when submerged. Hippos can even sleep underwater, using a reflex that allows them to bob up, take a breath, and sink back down without waking up.</p><br/>
+
+			<p>Hippos closest living relatives are cetaceans (whales) from which they diverged about 55 million years ago. Hippos generally live 40-50 years, the oldest living Hippo in captivity was Donna the Hippo who lived to the grand age of 61. Hippos grow to 10.8 to 16.5 feet (3.3 to 5 meters) long and 5.2 feet (1.6 meters) tall, females stop growing at around the age of 25 and males appear to continue growing their whole lives. Baby Hippos are born underwater and have to surface to take their first breaths and they often rest on their mother's back when the water is too deep for them. There are still a lot of things scientists don't know about Hippos, but they are slowly beginning to understand them.</p>
+
 		</div>
+
+		<!-- Habitat Article -->
 		<div id="menuHabitat" class="tab-pane fade">
-			<h2>Habitat</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+			<h4>Habitat</h4><br/>
+
+			<p>Hippos can live in savannah and forest areas so long as there is enough water to submerge in and plenty of grass nearby. As semiaquatic animals, Hippos spend alot of their time in water and live in pods inhabiting rivers, lakes and mangrove swamps. You can find Hippos living in Africa with Zambia and Tanzania possessing the largest populations. Due to the heat of their habitat, Hippos rely on water and mud to keep cool as they do not sweat. Hippos do secrete a viscous red fluid, that once thought to be blood, actually acts like a natural sunblock, protecting the Hippos thick skin (2 inches thick) from the sun and is also thought to be a possible healing agent.</p><br/>
+
+			<h4>Diet and Predators</h4><br/>
+
+			<figure>
+				<img id="habitatPic" class="infoPics" src="images\hippo8.jpg" alt="Hippo grazing">
+			</figure>
+
+			<p>Hippos are mostly herbivores, leaving the water at night and climbing steep banks in order to graze for 4-5 hours at night where they will consume around 80-150 pounds of vegatation covering upto 5 miles of territory. Whilst that sounds like a lot of food, it is quite modest taking into account the Hippos size, but due to their sedentary lifestyle is more than sufficient for them. Hippos only really have 3 predators to worry about, Crocodiles, Lions and Humans (see Hippos & People section). Both Lions and Crocodiles need to pretty hungry to attempt to kill a Hippo as they themselves can be killed in the process and so will generally target the Hippos young rather than attempt an adult.</p>
 		</div>
+
+		<!-- Behaviour Article -->
 		<div id="menuBehaviour" class="tab-pane fade">
-			<h2>Behaviour</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+			<h4>Behaviour</h4><br/>
+
+			<figure>
+				<img id="behaviourPic" class="infoPics" src="images\hippo10.jpg" alt="Mother Hippo with young">
+			</figure>
+
+			<p>Hippos are far from the a far cry from the gentle giants as they are portrayed, they can actually be very aggressive and territorial. Hippos live in pods comprimising of a dominant bull and around 10 females, males can join the pod so long as they act submissive to the bull. Pods have been known to be much larger even numbering 100 in size. Despite living in pods, Hippos are not social animals, bonds are normally only formed between mothers and their young and when Hippos leave the water to graze they do so individually. Hippos appear to communicate vocally through grunts and bellows, and may even practice echolocation, however the purpose of these vocalizations are currently unknown.</p><br/>
+
+			<h4>Aggression</h4><br/>
+
+			<p>Generally Hippos are only territorial in the water, on land they are not. In droughts when Hippos are forced to congregate near limited sources of water, the overcrowding disrupts the hierarchy and males can be seen with deep scars, old and fresh, due to daily fighting. As Hippos are so territorial, they are widely considered the most dangerous large animal in Africa, having attacked and killed humans with seemingly zero provocation. Hippos do everything aside from eating in the water from mating to fighting and are prodominantly herbivores, although cases of meat-eating and even cannibalism have been recorded, this behaviour is very rare as their stomachs are not suited to eating meat.</p>
+
 		</div>
+
+		<!-- Hippo Types Article -->
 		<div id="menuTypes" class="tab-pane fade">
-			<h2>Types of Hippo</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+			<p>There are 2 species of Hippo today, they are the Common Hippo and the Pygmy Hippo.</p><br/>
+
+			<figure>
+				<img class="infoPics typesPics" src="images\hippo12.jpg" alt="Common Hippo">
+			</figure>
+
+			<h4>Common Hippo</h4><br/>
+
+			<p>Common Hippos are the species of Hippo that most of the information on this site pertains to, there are an estimated 120,000-150,000 Common Hippos left in the wild. They are now mostly in areas protected by conservation and are considered vunerable.</p><br/>
+
+			<figure>
+				<img class="infoPics typesPics" src="images\hippo11.jpg" alt="Pygmy Hippo">
+			</figure>
+
+			<h4>Pygmy Hippo</h4><br/>
+
+			<p>Pygmy Hippos much smaller than their large cousins and also sadly much rarer, with there only being around 3,000 left in the world they are endangered. They are noctural and live in West Africa. Pygmy Hippos share a lot of traits with their cousins but there is still a lot that we don't know about them as they are so rare and difficult to study in the wild.</p>
+
 		</div>
+
+		<!-- People & Hippos Article -->
 		<div id="menuPeople" class="tab-pane fade">
-			<h2>People & Hippos</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+			<h4>People and Hippos in History</h4><br/>
+
+			<p>Throughout history Hippos were hunted for meat, due to their size one kill could feed an entire village. The earliest evidence of this is around 160,000 years old as bones with butchery marks have been found at Bouri Formation in Ethopia. Plenty of later evidence of hunting has been found including paintings and engravings between 4,000 and 5,000 years old in Tassili n'Ajjer Mountains near Djanet. Zulu warriors revered the Hippos for their bravery, since to the Zulus, not even the Lion could match a Hippo's courage. The first Hippo in a Zoo was Obaysch, who arrived at London Zoo in 1850, he attracted upto 10,000 visitors a day and inspired a popular song the "Hippopotamus Polka". The song inturn inspired storys, drawings, cartoons and songs that we may have seen today, a famous example would be the Hippos in the Disney film "Fantasia" or the popular board game "Hungry Hungry Hippos".</p><br/>
+
+			<h4>Modern day Hippos</h4><br/>
+
+			<figure>
+				<img id="humanPic" class="infoPics" src="images\hippo1.jpg" alt="Hippo in captivity">
+			</figure>
+
+			<p>Hippos today have lost a lot of the areas they would inhabit to humans, this means their numbers decreased hugely and are still dropping. This is due to them being poached as a substitute elephant ivory and for the illegal sale of Hippo meat which is considered a delicacy in some areas of central Africa. The most dramatic population change has been in the Congo, where in Virunga National Park the population has dropped from 29,000 in the 1970's to around 850 in 2005. Steps are being taken to try to conserve the Hippos, with many of their remaining habitats being protected by conservation schemes and many Zoos are helping with this. Fortunately Hippos breed quite well in captivity, but Zoos do not breed them as much as they could due to Hippos being expensive to keep. Toledo Zoo Hippoquarium features a 360,000 gallon pool for their Hippos. London Zoo is home to 2 Pygmy Hippos.</p>
+
 		</div>
 	</article>
 	
