--- a/templates/media.html
+++ b/templates/media.html
@@ -2,63 +2,72 @@
 
 	<!-- Sidebar -->
 	<aside class="col-sm-3">
-	<ul class="nav nav-pills nav-stacked">
-		<li class="active"><a data-toggle="pill" href="#menuPictures"><span class="glyphicon glyphicon-circle-arrow-right"></span>  Pictures</a></li>
-		<li><a data-toggle="pill" href="#menuVideo"><span class="glyphicon glyphicon-circle-arrow-right"></span>  Video</a></li>
-	</ul>
+		<ul class="nav nav-pills nav-stacked">
+			<li class="active"><a data-toggle="pill" href="#menuPictures"><span class="glyphicon glyphicon-circle-arrow-right"></span>  Pictures</a></li>
+			<li><a data-toggle="pill" href="#menuVideo"><span class="glyphicon glyphicon-circle-arrow-right"></span>  Video</a></li>
+		</ul>
 	</aside>
 
 	<!-- Picture Gallery -->
 	<article class="col-sm-9 tab-content">
 		<div id="menuPictures" class="tab-pane fade in active">
+		
 			<div class="col-lg-4 col-sm-6 col-xs-12">
 				<figure class="thumbnail">
 					<img src="images/hippo4.jpg" alt="Baby Hippo in water">
 					<figcaption>Cute baby Hippo</figcaption>
-				</a>
+				</figure>
 			</div>
+
 			<div class="col-lg-4 col-sm-6 col-xs-12">
 				<figure class="thumbnail">
 					<img src="images/hippo5.jpg" alt="Hippo eating">
 					<figcaption>Hippo being fed</figcaption>
 				</figure>
 			</div>
+
 			<div class="col-lg-4 col-sm-6 col-xs-12">
 				<figure class="thumbnail">
 					<img src="images/hippo6.jpg" alt="2 Hippos lying down">
 					<figcaption>Hippos lounging in sun</figcaption>
 				</figure>
 			</div>
+
 			<div class="col-lg-4 col-sm-6 col-xs-12">
 				<figure class="thumbnail">
 					<img src="images/hippo7.jpg" alt="Hippo submerged in water">
 					<figcaption>Hippo swimming</figcaption>
 				</figure>
 			</div>
+
 			<div class="col-lg-4 col-sm-6 col-xs-12">
 				<figure class="thumbnail">
 					<img src="images/hippo8.jpg" alt="Hippo eating grass">
 					<figcaption>Hippo grazing on grass</figcaption>
 				</figure>
 			</div>
+
 			<div class="col-lg-4 col-sm-6 col-xs-12">
 				<figure class="thumbnail">
 					<img src="images/hippo9.jpg" alt="Hippo leaning against a wall">
 					<figcaption>Bored Hippo</figcaption>
 				</figure>
 			</div>
+
 			<div class="col-lg-4 col-sm-6 col-xs-12">
 				<figure class="thumbnail">
 					<img src="images/hippo1.jpg" alt="Hippo in captivity">
 					<figcaption>Hippo at the Zoo</figcaption>
 				</figure>
 			</div>
+
 			<div class="col-lg-4 col-sm-6 col-xs-12">
 				<figure class="thumbnail">
 					<img src="images/hippo2.jpg" alt="Hippo sleeping">
 					<figcaption>Very comfortable Hippo</figcaption>
 				</figure>
 			</div>
+
 			<div class="col-lg-4 col-sm-6 col-xs-12">
 				<figure class="thumbnail">
 					<img src="images/hippo3.jpg" alt="Hippos fighting">
@@ -77,6 +86,7 @@
 			</div>
 		</div>
 
+		<!-- Video -->
 		<div id="menuVideo" class="tab-pane fade">
 			<h1>Placeholder for video</h1>
 		</div>
