Improved semantic text on info page

--- a/templates/info.html
+++ b/templates/info.html
@@ -12,10 +12,10 @@
 	</aside>
 
 	<!-- Infomation Sections -->
-	<article class="tab-content col-sm-9">
+	<section class="tab-content col-sm-9">
 
 		<!-- General Info Article -->
-		<div id="menuGeneral" class="tab-pane fade in active">
+		<article id="menuGeneral" class="tab-pane fade in active">
 
 			<h4>The Hippopotamus</h4><br/>
 
@@ -25,10 +25,10 @@
 
 			<p>Hippos closest living relatives are cetaceans (whales) from which they diverged about 55 million years ago. Hippos generally live 40-50 years, the oldest living Hippo in captivity was Donna the Hippo who lived to the grand age of 61. Hippos grow to 10.8 to 16.5 feet (3.3 to 5 meters) long and 5.2 feet (1.6 meters) tall, females stop growing at around the age of 25 and males appear to continue growing their whole lives. Baby Hippos are born underwater and have to surface to take their first breaths and they often rest on their mother's back when the water is too deep for them. There are still a lot of things scientists don't know about Hippos, but they are slowly beginning to understand them.</p>
 
-		</div>
+		</article>
 
 		<!-- Habitat Article -->
-		<div id="menuHabitat" class="tab-pane fade">
+		<article id="menuHabitat" class="tab-pane fade">
 
 			<h4>Habitat</h4><br/>
 
@@ -41,10 +41,10 @@
 			</figure>
 
 			<p>Hippos are mostly herbivores, leaving the water at night and climbing steep banks in order to graze for 4-5 hours at night where they will consume around 80-150 pounds of vegatation covering upto 5 miles of territory. Whilst that sounds like a lot of food, it is quite modest taking into account the Hippos size, but due to their sedentary lifestyle is more than sufficient for them. Hippos only really have 3 predators to worry about, Crocodiles, Lions and Humans (see Hippos & People section). Both Lions and Crocodiles need to pretty hungry to attempt to kill a Hippo as they themselves can be killed in the process and so will generally target the Hippos young rather than attempt an adult.</p>
-		</div>
+		</article>
 
 		<!-- Behaviour Article -->
-		<div id="menuBehaviour" class="tab-pane fade">
+		<article id="menuBehaviour" class="tab-pane fade">
 
 			<h4>Behaviour</h4><br/>
 
@@ -58,10 +58,10 @@
 
 			<p>Generally Hippos are only territorial in the water, on land they are not. In droughts when Hippos are forced to congregate near limited sources of water, the overcrowding disrupts the hierarchy and males can be seen with deep scars, old and fresh, due to daily fighting. As Hippos are so territorial, they are widely considered the most dangerous large animal in Africa, having attacked and killed humans with seemingly zero provocation. Hippos do everything aside from eating in the water from mating to fighting and are prodominantly herbivores, although cases of meat-eating and even cannibalism have been recorded, this behaviour is very rare as their stomachs are not suited to eating meat.</p>
 
-		</div>
+		</article>
 
 		<!-- Hippo Types Article -->
-		<div id="menuTypes" class="tab-pane fade">
+		<article id="menuTypes" class="tab-pane fade">
 
 			<p>There are 2 species of Hippo today, they are the Common Hippo and the Pygmy Hippo.</p><br/>
 
@@ -81,10 +81,10 @@
 
 			<p>Pygmy Hippos much smaller than their large cousins and also sadly much rarer, with there only being around 3,000 left in the world they are endangered. They are noctural and live in West Africa. Pygmy Hippos share a lot of traits with their cousins but there is still a lot that we don't know about them as they are so rare and difficult to study in the wild.</p>
 
-		</div>
+		</article>
 
 		<!-- People & Hippos Article -->
-		<div id="menuPeople" class="tab-pane fade">
+		<article id="menuPeople" class="tab-pane fade">
 
 			<h4>People and Hippos in History</h4><br/>
 
@@ -98,7 +98,7 @@
 
 			<p>Hippos today have lost a lot of the areas they would inhabit to humans, this means their numbers decreased hugely and are still dropping. This is due to them being poached as a substitute elephant ivory and for the illegal sale of Hippo meat which is considered a delicacy in some areas of central Africa. The most dramatic population change has been in the Congo, where in Virunga National Park the population has dropped from 29,000 in the 1970's to around 850 in 2005. Steps are being taken to try to conserve the Hippos, with many of their remaining habitats being protected by conservation schemes and many Zoos are helping with this. Fortunately Hippos breed quite well in captivity, but Zoos do not breed them as much as they could due to Hippos being expensive to keep. Toledo Zoo Hippoquarium features a 360,000 gallon pool for their Hippos. London Zoo is home to 2 Pygmy Hippos.</p>
 
-		</div>
-	</article>
+		</article>
+	</section>
 	
 </section>
