--- a/templates/media.html
+++ b/templates/media.html
@@ -88,7 +88,9 @@
 
 		<!-- Video -->
 		<div id="menuVideo" class="tab-pane fade">
-			<h1>Placeholder for video</h1>
+			<video preload="metadata" controls="controls">
+				<source src="video/hippo.mp4" type="video/mp4"/>
+			</video>
 		</div>
 	</article>
 </section>
