--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -1,3 +1,62 @@
 <section class="container">
-	<h1>Quiz Page</h1>
+	<form id="quizForm">
+
+		<!-- Question 1 Selectbox -->
+		<h4>Question 1</h4>
+		<p>How fast can a Hippo run?</p>
+		<label for="answer1">Answer:</label>
+		<select id="answer1">
+			<option value="12">12mph</option>
+			<option value="19">19mph</option>
+			<option value="22">22mph</option>
+			<option value="30">30mph</option>
+		</select>
+		<br/>
+
+		<!-- Question 2 Type Answer -->
+		<h4>Question 2</h4>
+		<p>What is the name of the oldest living Hippo in captivity?</p>
+		<label for="answer2">Answer:</label>
+		<input id="answer2" required="" placeholder="Your Answer" type="text" name="answer2"/>
+		<br/>
+
+		<!-- Question 3 Selectbox -->
+		<h4>Question 3</h4>
+		<p>Where are Hippos generally aggressive?</p>
+		<label for="answer3">Answer:</label>
+		<select id="answer3">
+			<option value="land">On Land</option>
+			<option value="water">In Water</option>
+			<option value="both">Both</option>
+		</select>
+		<br/>
+
+		<!-- Question 4 Type Answer -->
+		<h4>Question 4</h4>
+		<p>Which of the 2 types of Hippo is the rarest?</p>
+		<label for="answer4">Answer:</label>
+		<input id="answer4" required="" placeholder="Your Answer" type="text" name="answer4"/>
+		<br/>
+
+		<!-- Question 5 Selectbox -->
+		<h4>Question 5</h4>
+		<p>The first ever Hippo in captivity was Obaysch at which Zoo?</p>
+		<label for="answer5">Answer:</label>
+		<select id="answer5">
+			<option value="sandiego">Sandiego Zoo</option>
+			<option value="toledo">Toledo Zoo</option>
+			<option value="london">London Zoo</option>
+			<option value="elsalvador">El Salvador Zoo</option>
+		</select>
+		<br/><br/>
+
+		<!-- Email request -->
+		<label for="email">Email:</label>
+		<input id="email" required="" placeholder="joebloggs@bloggs.com" type="email" name="email"/>
+		<br/><br/>
+
+		<!-- Submit Form -->
+		<input type="submit" name="submit"/>
+
+	</form>
 </section>
