--- a/css/hippo.css
+++ b/css/hippo.css
@@ -212,6 +212,42 @@ video {
 	padding-right: 10px;
 }
 
+#quizForm > .btn {
+	color: #5C5757;
+	background-color: #A9A9AE;
+	border: 2px solid #5C5757;
+	font-weight: bold;
+}
+
+#score {
+	display: inline-block;
+	float: right;
+	font-size: 30px;
+	color: red;
+}
+
+.glyphicon-ok {
+	color: green;
+}
+
+.glyphicon-remove {
+	color: red;
+}
+
+#o1, #o2, #o3, #o4, #o5, #x1, #x2, #x3, #x4, #x5 {
+	display: none;
+}
+
+#submitButton {
+	margin: auto;
+	display: block;
+}
+
+#resetButton {
+	margin: auto;
+	display: none;
+}
+
 /* Links Page CSS */
 .hippolinks {
 	text-align: center;
