--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -1,62 +1,73 @@
 <section class="container">
-	<form id="quizForm">
+	<article class="col-sm-12">
+		<form id="quizForm" name="quizForm" ng-submit="submitQuiz()">
+	
+			<!-- Question 1 Selectbox -->
+			<h4>Question 1</h4>
+			<p>How fast can a Hippo run?</p>
+			<label for="answer1">Answer:</label>
+			<select id="answer1" required="" ng-model="user.answer1">
+				<option value="12">12mph</option>
+				<option value="19">19mph</option>
+				<option value="22">22mph</option>
+				<option value="30">30mph</option>
+			</select>
+			<span id="o1" class="glyphicon glyphicon-ok"></span>
+			<span id="x1" class="glyphicon glyphicon-remove"></span>
+			<br/>
 
-		<!-- Question 1 Selectbox -->
-		<h4>Question 1</h4>
-		<p>How fast can a Hippo run?</p>
-		<label for="answer1">Answer:</label>
-		<select id="answer1">
-			<option value="12">12mph</option>
-			<option value="19">19mph</option>
-			<option value="22">22mph</option>
-			<option value="30">30mph</option>
-		</select>
-		<br/>
+			<!-- Question 2 Type Answer -->
+			<h4>Question 2</h4>
+			<p>What is the name of the oldest living Hippo in captivity?</p>
+			<label for="answer2">Answer:</label>
+			<input id="answer2" autocomplete="off" required="" placeholder="Your Answer" type="text" name="answer2" ng-model="user.answer2"/>
+			<span id="o2" class="glyphicon glyphicon-ok"></span>
+			<span id="x2" class="glyphicon glyphicon-remove"></span>
+			<br/>
 
-		<!-- Question 2 Type Answer -->
-		<h4>Question 2</h4>
-		<p>What is the name of the oldest living Hippo in captivity?</p>
-		<label for="answer2">Answer:</label>
-		<input id="answer2" required="" placeholder="Your Answer" type="text" name="answer2"/>
-		<br/>
+			<!-- Question 3 Selectbox -->
+			<h4>Question 3</h4>
+			<p>Where are Hippos generally aggressive?</p>
+			<label for="answer3">Answer:</label>
+			<select id="answer3" required="" ng-model="user.answer3">
+				<option value="land">On Land</option>
+				<option value="water">In Water</option>
+				<option value="both">Both</option>
+			</select>
+			<span id="o3" class="glyphicon glyphicon-ok"></span>
+			<span id="x3" class="glyphicon glyphicon-remove"></span>
+			<br/>
 
-		<!-- Question 3 Selectbox -->
-		<h4>Question 3</h4>
-		<p>Where are Hippos generally aggressive?</p>
-		<label for="answer3">Answer:</label>
-		<select id="answer3">
-			<option value="land">On Land</option>
-			<option value="water">In Water</option>
-			<option value="both">Both</option>
-		</select>
-		<br/>
+			<!-- Question 4 Type Answer -->
+			<h4>Question 4</h4>
+			<p>Which of the 2 types of Hippo is the rarest?</p>
+			<label for="answer4">Answer:</label>
+			<input id="answer4" autocomplete="off" required="" placeholder="Your Answer" type="text" name="answer4" ng-model="user.answer4"/>
+			<span id="o4" class="glyphicon glyphicon-ok"></span>
+			<span id="x4" class="glyphicon glyphicon-remove"></span>
+			<br/>
 
-		<!-- Question 4 Type Answer -->
-		<h4>Question 4</h4>
-		<p>Which of the 2 types of Hippo is the rarest?</p>
-		<label for="answer4">Answer:</label>
-		<input id="answer4" required="" placeholder="Your Answer" type="text" name="answer4"/>
-		<br/>
+			<!-- Question 5 Selectbox -->
+			<h4>Question 5</h4>
+			<p>The first ever Hippo in captivity was Obaysch at which Zoo?</p>
+			<label for="answer5">Answer:</label>
+			<select id="answer5" required="" ng-model="user.answer5">
+				<option value="sandiego">Sandiego Zoo</option>
+				<option value="toledo">Toledo Zoo</option>
+				<option value="london">London Zoo</option>
+				<option value="elsalvador">El Salvador Zoo</option>
+			</select>
+			<span id="o5" class="glyphicon glyphicon-ok"></span>
+			<span id="x5" class="glyphicon glyphicon-remove"></span>
+			<br/><br/>
 
-		<!-- Question 5 Selectbox -->
-		<h4>Question 5</h4>
-		<p>The first ever Hippo in captivity was Obaysch at which Zoo?</p>
-		<label for="answer5">Answer:</label>
-		<select id="answer5">
-			<option value="sandiego">Sandiego Zoo</option>
-			<option value="toledo">Toledo Zoo</option>
-			<option value="london">London Zoo</option>
-			<option value="elsalvador">El Salvador Zoo</option>
-		</select>
-		<br/><br/>
+			<!-- Submit Form -->
+			<button id="submitButton" type="submit" class="btn btn-primary" ng-disabled="quizForm.$invalid" name="submit">Submit Quiz</button>
+			<button id="resetButton" type="button" class="btn btn-primary" ng-click="reset()" value="reset">Reset</button>
 
-		<!-- Email request -->
-		<label for="email">Email:</label>
-		<input id="email" required="" placeholder="joebloggs@bloggs.com" type="email" name="email"/>
-		<br/><br/>
+			<!-- Score -->
+			<p id="score"></p>
 
-		<!-- Submit Form -->
-		<input type="submit" name="submit"/>
-
-	</form>
+		</form>
+	</article>
 </section>
