--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -1,5 +1,5 @@
-<section class="container">
-	<article class="col-sm-12">
+<section id="quizContainer" class="container">
+	<article id="quizArticle" class="col-sm-8">
 		<form id="quizForm" name="quizForm" ng-submit="submitQuiz()">
 	
 			<!-- Question 1 Selectbox -->
@@ -70,4 +70,10 @@
 
 		</form>
 	</article>
+
+	<!-- Cartoon Hippo Image -->
+	<figure id="quizCartoon" class="col-sm-4">
+		<img id="quizHippo" src="images\hippocartoon.svg" alt="Cartoon Hippo">
+	</figure>
+
 </section>
