--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -76,4 +76,21 @@
 		<img id="quizHippo" src="images\hippocartoon.svg" alt="Cartoon Hippo">
 	</figure>
 
+	<!-- Modal to show score -->
+	<div class="modal fade" id="quizModal" aria-hidden="true">
+		<div class="modal-content">   
+			<div class="modal-header">
+				<p id="scoreHeader">Quiz Results</p>
+				<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span></button>
+			</div>           
+			<div class="modal-body">
+				<img src="" id="quizModalImage">
+			</div>
+			<div class="modal-footer">
+				<p id="quizModalFooter"></p>
+				<p id="modalScore"></p>
+			</div>
+		</div>
+	</div>
+
 </section>
