--- a/templates/media.html
+++ b/templates/media.html
@@ -78,9 +78,12 @@
 
         <!-- Modal to enlarge pictures onclick, hidden by default-->
 		<div class="modal fade" id="hippomodal" aria-hidden="true">
-			<div class="modal-content">              
-				<div class="modal-body">
+			<div class="modal-content">  
+				<div class="modal-header">
+					<p id="modalCaption"></p>
 					<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span></button>
+				</div>            
+				<div class="modal-body">
 					<img src="" class="hippopreview">
 				</div>
 			</div>
