--- a/templates/info.html
+++ b/templates/info.html
@@ -1,4 +1,4 @@
-<section class="container">
+<div class="container">
 
 	<!-- Sidebar -->
 	<aside class="col-sm-3">
@@ -103,4 +103,4 @@
 		</article>
 	</section>
 	
-</section>
+</div>
