--- a/templates/links.html
+++ b/templates/links.html
@@ -1,4 +1,4 @@
-<section class="container">
+<div class="container">
 
 	<!-- Links -->
 	<article class="col-sm-12 hippolinks">
@@ -17,4 +17,4 @@
 		</figure>
 	</article>
 
-</section>
+</div>
