--- a/templates/media.html
+++ b/templates/media.html
@@ -1,4 +1,4 @@
-<section class="container">
+<div class="container">
 
 	<!-- Sidebar -->
 	<aside class="col-sm-3">
@@ -96,4 +96,4 @@
 			</video>
 		</div>
 	</article>
-</section>
+</div>
