--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -1,4 +1,4 @@
-<section id="quizContainer" class="container">
+<div id="quizContainer" class="container">
 	<article id="quizArticle" class="col-sm-8">
 		<form id="quizForm" name="quizForm" ng-submit="submitQuiz()">
 	
@@ -93,4 +93,4 @@
 		</div>
 	</div>
 
-</section>
+</div>
