--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,4 @@
-<section class="container">
+<div class="container">
 
 	<!-- Image Carousel -->
 	<figure id="hippoCarousel" class="carousel slide" data-ride="carousel">
@@ -41,4 +41,4 @@
 		</a>
 	</figure>
 
-</section>
+</div>
